--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ChutipongAiengpranee</title>
-  <link rel="stylesheet" href="walter.css">
+  <link rel="stylesheet" href="test.css">
   <script src="white.js" defer></script>
 </head>
 <body>
@@ -75,3 +75,4 @@
 </body>
 
 </html>
+
