--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
             <img src="images/pum.jpg" alt="รูปหลัก">
         </nav>
 
+      <div class="container">
         <nav class="photogrid">
             <img src="images/รูปปั๊ม1.jfif">
             <img src="images/ปั๊ม 3.jpg">
             <img src="images/รูปปั๊ม2.jpg">
            
         </nav>
+      </div>
 
         <nav class="photogrid2">
             <img src="images/ปั๊มskill2-Photoroom.png">
@@ -75,4 +77,5 @@
 </body>
 
 </html>
+
 
