--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
         <nav class="photogrid2">
-            <img src="images/ปั๊มskill2-Photoroom.png">
+            <img src="images/walter.jfif">
 
            
         </nav>
@@ -77,6 +77,7 @@
 </body>
 
 </html>
+
 
 
 
