--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
         <nav class="photogrid2">
-            <img src="images/pumwalter.png">
+            <img src="images/pumzz.jpg">
 
            
         </nav>
@@ -77,6 +77,7 @@
 </body>
 
 </html>
+
 
 
 
