--- a/skill.html
+++ b/skill.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChutipongAiengpranee</title>
-    <link rel="stylesheet" href="fix.css">
+    <link rel="stylesheet" href="backendskill.css">
     <script src="script2.js" defer></script>
 
 </head>
@@ -129,3 +129,4 @@
 
 </body>
 </html>
+
