--- a/skill.html
+++ b/skill.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <div id="orientation-warning" style="display:none; padding:40px; text-align:center; font-size:18px; color:red;">
     <!--ส่วนหัว-->
     <header>
         <nav class="navbar">
@@ -99,6 +100,7 @@
 
          </div>   
         </div>
+</div>
     </section>
 
     <script>
@@ -120,6 +122,8 @@
         img.src = images/ปั๊ม1-Photoroom.png;
         
     });
+
+   
     </script>
 
 
@@ -129,4 +133,5 @@
 
 </body>
 </html>
+
 
