--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
             <ul>
                 <li> <a href="aboutme.html">ใครคือปั๊ม</a> </li>
                 <li> <a href="skill.html">ทำไรได้บ้าง</a> </li>
-                <li> <a href="works.html">ผลงาน</a> </li>
+                <li> <a href="work.html">ผลงาน</a> </li>
                 <li> <a href="contact.html">ช่องทางการติดต่อ</a> </li>
                 <li><a href="index.html">หน้าหลัก</a></li>
             </ul>
@@ -102,3 +102,4 @@
 
 </body>
 </html>
+
