--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!--loading-->
         <div id="loading">
             <div class="loading-content">
-            <img src="images/Michael Jordan Mj GIF by Respective.gif" alt="กำลังโหลด" />
+            <img src="images/Loading Downloading GIF by Vera Verreschi.gif" alt="กำลังโหลด" />
             <p id="loading-text">กำลังโหลด...0%</p>
             </div>
         </div>
@@ -77,6 +77,7 @@
 </body>
 
 </html>
+
 
 
 
