--- a/skill.html
+++ b/skill.html
@@ -63,7 +63,7 @@
 
 <div class="extra-skill-grid">
   <div>
-    <img src="images/cisco-packet-tracer.png" alt="โลโก้ Cisco" onclick="openModal('Ciscopacket', 2, 'ได้ศึกษาในการวางระบบเครือข่ายแต่เนื่องจากไม่ใช่วิชาหลักเลยไม่ชำนาญครับ')">
+    <img src="images/cisco-packet-tracer.png" alt="โลโก้ Cisco" onclick="openModal('Cisco-packet-tracer', 2, 'ได้ศึกษาในการวางระบบเครือข่ายแต่เนื่องจากไม่ใช่วิชาหลักเลยไม่ชำนาญครับ')">
   </div>
   <div>
     <img src="images/linux.png" alt="โลโก้ Linux" onclick="openModal('linux', 3, 'เคยได้ศึกษา cybersecurity ในระดับเบื้องต้นครับ')">
@@ -72,7 +72,7 @@
     <img src="images/kodular.png" alt="โลโก้ Kodular" onclick="openModal('kodular', 4, 'เคยศึกษาในระดับปวชครับ')">
   </div>
   <div>
-    <img src="images/Adobe_Premiere_Pro_CC_icon.svg.png" alt="โลโก้ Premiere Pro" onclick="openModal('linux', 4, 'สามารถตัดคลิปผ่านโปรแกรมนี้ได้ครับ')">
+    <img src="images/Adobe_Premiere_Pro_CC_icon.svg.png" alt="โลโก้ Premiere Pro" onclick="openModal('Adobe Premierepro', 4, 'สามารถตัดคลิปผ่านโปรแกรมนี้ได้ครับ')">
   </div>
 </div>
 
@@ -129,4 +129,5 @@
 
 </body>
 </html>
+
 
