--- a/contact.html
+++ b/contact.html
@@ -44,12 +44,13 @@
 </section>
 
 
-        <div class="info"><h2>Email: Chutipong.aie@spumail.net,magmarondabeat@gmail.com  <br>IG:pumwayne<br>facebook:Chuti pong <br>Github:wayne110647</h2></div>
+        <div class="info"><h2>Email: Chutipong.aie@spumail.net<br>magmarondabeat@gmail.com  <br>IG:pumwayne<br>facebook:Chuti pong <br>Github:wayne110647</h2></div>
 
         
     
 </body>
 
 </html>
+
 
 
